perf: parallelize OpenAI OCR calls and add configurable concurrency & DPI\n\n- Added p-limit for controlled concurrency (default 5)\n- Extract text from pages in parallel while images are being converted\n- Added CONVERT_DPI env var to adjust resolution for speed\n- Updated render.yaml with CONCURRENCY and CONVERT_DPI\n- Should cut total processing time by 3-5× and keep 10-15-page PDFs under Render’s 100 s limit

--- a/render.yaml
+++ b/render.yaml
@@ -14,9 +14,13 @@ services:
       - key: OPENAI_API_KEY
         sync: false  # This will be set manually in Render dashboard
       - key: OPENAI_MODEL
-        value: gpt-4o-mini
+        value: gpt-4.1-nano
       - key: MAX_PAGES
         value: "10"
+      - key: CONCURRENCY
+        value: "5"
+      - key: CONVERT_DPI
+        value: "200"
     healthCheckPath: /health
     scaling:
       minInstances: 1
