--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdf2pic": "^3.2.0",
     "sharp": "^0.33.5",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "p-limit": "^4.0.0"
   }
 }
